--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "sharp": "^0.32.6",
     "uuid": "^11.1.0",
     "ytdl-core": "^4.11.5"
+    "engines": {
+    "node": ">=20.0.0"
+}
+
   }
 }
