--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "ISC", "engines": {
+  "node": ">=20.0.0"
+}
+
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.18",
     "axios": "^1.11.0",
@@ -21,9 +24,6 @@
     "sharp": "^0.32.6",
     "uuid": "^11.1.0",
     "ytdl-core": "^4.11.5"
-    "engines": {
-    "node": ">=20.0.0"
-}
 
   }
 }
