--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC", "engines": {
-  "node": ">=20.0.0"
-},
-
+  "license": "ISC",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.18",
     "axios": "^1.11.0",
@@ -24,6 +25,5 @@
     "sharp": "^0.32.6",
     "uuid": "^11.1.0",
     "ytdl-core": "^4.11.5"
-
   }
 }
